fix (Collapse): make it actually collapse

--- a/packages/grapos/src/Transitions/Collapse/Collapse.scss
+++ b/packages/grapos/src/Transitions/Collapse/Collapse.scss
@@ -1,35 +1,15 @@
+.collapse-enter-active,
+.collapse-exit-active {
+  transition: max-height .3s !important;
+  overflow-y: hidden !important;
+}
 
-$origins: top left right bottom;
+.collapse-enter-to,
+.collapse-exit {
+  max-height: var(--expected-height);
+}
 
-@each $origin in $origins {
-  .shrink-fade-#{$origin}-enter-active,
-  .shrink-fade-#{$origin}-exit-active {
-    transition: width .2s, height .2s !important;
-    @if $origin == 'top' {
-      height: 0 !important;
-    } @else if $origin == 'bottom' {
-      height: 0 !important;
-    } 
-
-    @if $origin == 'left' {
-      width: 0 !important;
-    } @else if $origin == 'right' {
-      width: 0 !important;
-    }
-  }
-
-  .shrink-fade-#{$origin}-exit-to,
-  .shrink-fade-#{$origin}-enter {
-    @if $origin == 'top' {
-      height: 100% !important;
-    } @else if $origin == 'bottom' {
-      height: 100% !important;
-    } 
-
-    @if $origin == 'left' {
-      width: 100% !important;
-    } @else if $origin == 'right' {
-      width: 100% !important;
-    }
-  }
+.collapse-exit-to,
+.collapse-enter {
+  max-height: 0 !important;
 }
